--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,10 @@ build.dependsOn shadowJar
 private static String getLr(String suspend) {
     return 'python3 ../miniaicups/madcars/Runners/localrunner.py ' +
 
-            '-s "java -agentlib:jdwp=transport=dt_socket,server=y,suspend=' + suspend +
+            '-f "java -agentlib:jdwp=transport=dt_socket,server=y,suspend=' + suspend +
             ',address=5005,quiet=y -jar ./build/libs/kotlinStrategy.jar 1" ' +
-            '-m PillHillMap,Bus PillHillMap,Buggy PillHillMap,SquareWheelsBuggy PillHubbleMap,Buggy PillHillMap,Buggy PillHillMap,SquareWheelsBuggy' +
-            //'-f \"python3 ./main.py 0\"' +
+            '-s "python3 ./main.py 0" ' +
+            '-m PillHillMap,Buggy PillHillMap,SquareWheelsBuggy PillHillMap,Buggy PillHillMap,Buggy PillHillMap,SquareWheelsBuggy' +
             ''
 }
 
