--- a/build.gradle
+++ b/build.gradle
@@ -45,10 +45,12 @@ build.dependsOn shadowJar
 private static String getLr(String suspend) {
     return 'python3 ../miniaicups/madcars/Runners/localrunner.py ' +
 
-            '-f "java -agentlib:jdwp=transport=dt_socket,server=y,suspend=' + suspend +
+            '-s "java -agentlib:jdwp=transport=dt_socket,server=y,suspend=' + suspend +
             ',address=5005,quiet=y -jar ./build/libs/kotlinStrategy.jar 1" ' +
-            '-s "python3 ./main.py 0" ' +
-            '-m PillHillMap,Buggy PillHillMap,SquareWheelsBuggy PillHillMap,Buggy PillHillMap,Buggy PillHillMap,SquareWheelsBuggy' +
+            //'-s "python3 ./main.py 0" ' +
+           // '-m PillCarcassMap,Buggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,Buggy PillCarcassMap,Buggy IslandHoleMap,SquareWheelsBuggy' +
+           // '-m PillHillMap,Buggy PillHillMap,SquareWheelsBuggy PillHillMap,Buggy PillHillMap,Buggy PillHillMap,SquareWheelsBuggy' +
+            '-m PillHillMap,Bus PillHillMap,Bus PillHillMap,Buggy PillHillMap,Bus PillHillMap,Bus' +
             ''
 }
 
