--- a/build.gradle
+++ b/build.gradle
@@ -50,12 +50,12 @@ private static String getLr(String suspend) {
            // '-f "python3 ./main.py 0" ' +
            // '-m PillCarcassMap,Bus PillCarcassMap,Bus PillCarcassMap,Bus PillCarcassMap,Bus IslandHoleMap,Bus' +
           //  '-m PillCarcassMap,Buggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,Buggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,Buggy' +
-            //'-m PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy' +
+            '-m PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy PillCarcassMap,SquareWheelsBuggy' +
           //  '-m IslandMap,SquareWheelsBuggy IslandMap,SquareWheelsBuggy IslandMap,SquareWheelsBuggy IslandMap,SquareWheelsBuggy IslandMap,SquareWheelsBuggy' +
           //  '-m IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy IslandMap,Buggy ' +
            // '-m PillHillMap,Buggy PillHillMap,SquareWheelsBuggy PillHillMap,Buggy PillHillMap,Buggy PillHillMap,SquareWheelsBuggy' +
           //  '-m PillHillMap,Bus PillHillMap,Bus PillHillMap,Bus PillHillMap,Bus PillHillMap,Bus PillHillMap,Bus PillHillMap,Bus PillHillMap,Bus' +
-            '-m PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus' +
+            //'-m PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus PillHubbleMap,Bus' +
             ''
 }
 
